Added the clients, configuration files and some test cases for CRUD operations

--- a/.env
+++ b/.env
@@ -1,2 +1,20 @@
-BASE_API_URL=https://reqres.in/
-API_KEY='reqres-free-v1'
+# Environment
+NODE_ENV=development
+
+# API Configuration
+API_BASE_URL=https://reqres.in
+API_KEY=reqres-free-v1
+
+# Test Configuration
+TEST_TIMEOUT=30000
+TEST_RETRIES=1
+TEST_WORKERS=2
+
+# Logging Configuration
+LOG_LEVEL=info
+
+# CI/CD Configuration
+CI=false
+
+# Custom Configuration
+CUSTOM_HEADER_VALUE=test-framework-v1
