Added the ci-cd pipeline yaml file and updated the README.md file.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:debug": "npx playwright test --debug",
     "test:headed": "npx playwright test --headed",
     "test:trace": "npx playwright test --trace=on",
+    "test:smoke": "npx playwright test --grep=\"@smoke\" --reporter=list",
+    "test:critical": "npx playwright test --grep=\"@critical\" --reporter=list",
     "report": "npx playwright show-report",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -20,7 +22,22 @@
     "clean": "rm -rf test-results playwright-report logs",
     "clean:all": "npm run clean && rm -rf node_modules package-lock.json",
     "install:browsers": "npx playwright install --with-deps",
-    "setup": "npm install && npm run install:browsers"
+    "setup": "npm install && npm run install:browsers",
+    "deploy:dev": "./scripts/deploy.sh -e development -v main",
+    "deploy:staging": "./scripts/deploy.sh -e staging -v main",
+    "deploy:prod": "./scripts/deploy.sh -e production",
+    "rollback:dev": "./scripts/rollback.sh -e development",
+    "rollback:staging": "./scripts/rollback.sh -e staging",
+    "rollback:prod": "./scripts/rollback.sh -e production",
+    "smoke:dev": "./scripts/smoke-tests.sh -e development",
+    "smoke:staging": "./scripts/smoke-tests.sh -e staging",
+    "smoke:prod": "./scripts/smoke-tests.sh -e production",
+    "docker:build": "docker build -f docker/Dockerfile -t api-tests .",
+    "docker:dev": "docker-compose -f docker/docker-compose.yml --profile development up",
+    "docker:staging": "docker-compose -f docker/docker-compose.yml --profile staging up",
+    "docker:prod": "docker-compose -f docker/docker-compose.yml --profile production up",
+    "docker:ci": "docker-compose -f docker/docker-compose.yml --profile ci up",
+    "docker:down": "docker-compose -f docker/docker-compose.yml down"
   },
   "keywords": [
     "api-testing",
