Removed hardcoded passwords to pass the GitGuardian check

--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,9 @@ APP_VERSION=1.0.0
 # =============================================================================
 
 # Base URL for the API under test
-# Development: https://dev-api.example.com
-# Staging: https://staging-api.example.com  
-# Production: https://api.example.com
+# Development: https://dev-api.reqres.in
+# Staging: https://staging-api.reqres.in
+# Production: https://api.reqres.in
 # Local: http://localhost:3000
 API_BASE_URL=https://reqres.in
 
@@ -54,6 +54,13 @@ TEST_DATA_SOURCE=file
 
 # Test data file path (when using file source)
 TEST_DATA_PATH=./test-data
+
+# Test user passwords (for fixture data)
+TEST_USER_PASSWORD=test-user-password
+TEST_ADMIN_PASSWORD=test-admin-password
+TEST_AUTH_PASSWORD=test-auth-password
+TEST_AUTH_PASSWORD_ALT=test-auth-password-alt
+TEST_INVALID_PASSWORD=invalid-test-password
 
 # =============================================================================
 # LOGGING CONFIGURATION
@@ -196,7 +203,7 @@ MEMORY_LIMIT=512
 # LOG_LEVEL=debug
 # TEST_WORKERS=1
 
-# Staging environment overrides  
+# Staging environment overrides
 # Uncomment and modify for staging
 # API_BASE_URL=https://staging-api.example.com
 # LOG_LEVEL=info
@@ -214,10 +221,10 @@ MEMORY_LIMIT=512
 # =============================================================================
 # Note: In production, use proper secrets management solutions like:
 # - AWS Secrets Manager
-# - Azure Key Vault  
+# - Azure Key Vault
 # - HashiCorp Vault
 # - Kubernetes Secrets
 # - GitHub Secrets (for CI/CD)
-# 
+#
 # Never commit actual secrets to version control!
 # =============================================================================
