Fixed linting issues and added fallback for linting.

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ TEST_ADMIN_PASSWORD=test-admin-password
 TEST_AUTH_PASSWORD=test-auth-password
 TEST_AUTH_PASSWORD_ALT=test-auth-password-alt
 TEST_INVALID_PASSWORD=invalid-test-password
+TEST_INVALID_PASSWORD_SHORT=inv
 
 # =============================================================================
 # LOGGING CONFIGURATION
