--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -31,7 +31,7 @@ on:
 
 env:
   NODE_VERSION: '20'
-  PRODUCTION_URL: 'https://api.example.com'
+  PRODUCTION_URL: 'https://api.reqres.in'
   ROLLBACK_TIMEOUT: '300' # 5 minutes
 
 jobs:
