--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -151,6 +151,10 @@ jobs:
           path: |
             dist/
             node_modules/
+            package.json
+            package-lock.json
+            tsconfig.json
+            playwright.config.ts
             playwright-report/
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
@@ -187,6 +191,55 @@ jobs:
         with:
           name: build-artifacts-${{ github.sha }}
 
+      - name: Restore Dependencies and Install Playwright
+        run: |
+          echo "Checking downloaded artifacts..."
+          ls -la
+
+          echo "Checking if package.json exists..."
+          if [ -f "package.json" ]; then
+            echo "package.json found"
+          else
+            echo "ERROR: package.json not found in artifacts!"
+            exit 1
+          fi
+
+          echo "Checking if node_modules exists..."
+          if [ -d "node_modules" ]; then
+            echo "node_modules found in artifacts"
+            echo "Checking node_modules/.bin directory..."
+            if [ -d "node_modules/.bin" ]; then
+              ls -la node_modules/.bin/ | head -10
+              echo "Checking for playwright..."
+              ls -la node_modules/.bin/ | grep playwright || echo "playwright not found in .bin"
+            else
+              echo "node_modules/.bin directory not found"
+            fi
+          else
+            echo "node_modules not found, installing dependencies..."
+          fi
+
+          # Always reinstall dependencies to ensure proper setup
+          echo "Reinstalling dependencies to ensure proper setup..."
+          if [ -f "package-lock.json" ]; then
+            npm ci --prefer-offline --no-audit
+          else
+            npm install --prefer-offline --no-audit
+          fi
+
+          echo "Verifying npm and npx..."
+          which npm
+          which npx
+          npm --version
+          npx --version
+
+          echo "Checking if playwright is now available..."
+          npx playwright --version || echo "playwright still not available via npx"
+
+          echo "Installing Playwright browsers..."
+          npx playwright install --with-deps
+          echo "Playwright browsers installed successfully"
+
       - name: Setup Test Environment
         run: |
           echo "Setting up test environment: ${{ matrix.environment }}"
@@ -203,12 +256,6 @@ jobs:
             echo "API_BASE_URL=https://reqres.in" >> $GITHUB_ENV
             echo "API_KEY=" >> $GITHUB_ENV
           fi
-
-      - name: Install Playwright Browsers
-        run: |
-          echo "Installing Playwright browsers for test execution..."
-          npx playwright install --with-deps
-          echo "Playwright browsers installed successfully"
 
       - name: Execute Test Suite
         id: test-execution
@@ -448,8 +495,19 @@ jobs:
         with:
           name: build-artifacts-${{ github.sha }}
 
-      - name: Install Playwright Browsers
+      - name: Restore Dependencies and Install Playwright
         run: |
+          echo "Checking downloaded artifacts for smoke tests..."
+          ls -la
+
+          # Always reinstall dependencies to ensure proper setup
+          echo "Installing dependencies for smoke tests..."
+          if [ -f "package-lock.json" ]; then
+            npm ci --prefer-offline --no-audit
+          else
+            npm install --prefer-offline --no-audit
+          fi
+
           echo "Installing Playwright browsers for smoke tests..."
           npx playwright install --with-deps
           echo "Playwright browsers installed successfully"
