Fixed the API_KEY issue

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ APP_VERSION=1.0.0
 API_BASE_URL=https://reqres.in
 
 # API authentication key
-API_KEY=your-api-key-here
+API_KEY=reqres-free-v1
 
 # API timeout in milliseconds
 API_TIMEOUT=30000
